force-app/main/default/objects/Star__c/Star__c.object-meta.xml
<CustomObject>
    <label>Star</label>
    <nameField>
        <label>Star Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>