force-app/main/default/objects/Star__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>Login</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>