force-app/main/default/objects/Star__c/fields/NumberForks__c.field-meta.xml
<CustomField>
    <fullName>NumberForks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>number of forks</description>
    <label>Number of Forks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>