force-app/main/default/objects/Star__c/fields/NumberStars__c.field-meta.xml
<CustomField>
    <fullName>NumberStars__c</fullName>
    <defaultValue>0</defaultValue>
    <description>number of stars</description>
    <label>Number of Stars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>